# android-sdk-tool

./: README.md  pyproject.toml
androidsdktool/: apk_signer.py  install_sdk.py
